// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar in date range mode should render date range view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-date-range">
    <div class="m-calendar__render m-calendar-range-date__render">
        <div class="m-simple-calendar"></div>
    </div>
</div>
`;

exports[`Calendar in single date mode should render single dates view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
    <div class="m-calendar__render m-calendar-single-date__render">
        <div class="m-simple-calendar"></div>
    </div>
</div>
`;

exports[`Calendar with default values should render default view 1`] = `
<div id="m-calendar-uuid" class="m-calendar m-calendar-single-date">
    <div class="m-calendar__render m-calendar-single-date__render">
        <div class="m-simple-calendar"></div>
    </div>
</div>
`;
